cc: Add a helper function for transforming rects between surface spaces

And use it everywhere we convert rects in draw_property_utils.cc between
surface spaces. Using this helper function also fixes a bug in
caclulating render surface's clip rect.

BUG=663309
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2734983004
Cr-Commit-Position: refs/heads/master@{#455222}

Former-commit-id: 44b074ebba30c2f7c20c70f6a3a6a95ebc341037